@@ -3,7 +3,9 @@ Version: 1.3.10
 Date: ????
   Changes:
     - Update Nullius preset to account for boxed versions of milestones in the "Resources" group (ingots, processors, glass).
-    - Improve the look of the scroll bars that appear when using large milestones set.
+    - GUI improvements:
+      - Improve the look of the scroll bars that appear when using large milestones set.
+      - Milestones from different groups are now aligned properly.
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.9
